--- a/try.html
+++ b/try.html
@@ -65,7 +65,21 @@
     </div>
     <div class="container-fluid" style="background-color: white;padding: 70px 15px;">
         <div class="container">
-            <div class="row">
+            <div class="row" style="margin-top: 5px;">
+                <div class="col-lg-12 text-center">
+                    <main ontouchstart id="styles">
+                        <nav class="tab-link">
+                            <a>ALL</a>
+                            <a>DESIGN</a>
+                            <a>BRANDING</a>
+                            <a>WORKS</a>
+                            <a>UI/UX</a>
+                            <hr />
+                        </nav>
+                    </main>
+                </div>
+            </div>
+            <div class="row" style="margin-top: 20px">
                 <div class="col-lg-12">
                     <div class="card-deck">
                         <div class="card">
@@ -178,6 +192,42 @@
             </div>
         </div>
     </div>
+    <div class="container-fluid conWhite">
+        <div class="container">
+            <div class="row align-items-center" style="margin-top: 40px;position:relative;">
+                <p class="pAboutMeBack">ABOUT ME</p>
+                <div class="col-lg-6">
+                    <img src="Image/me4.jpg" class="img-fluid imgMe mx-auto d-block" style="width: 380px">
+                </div>
+                <div class="col-lg-6">
+                    <p class="pAbout">About me</p>
+                    <p class="pAboutDesc">I'm a web developer / designer and i love developement. I love minimalism,
+                        less animation, less
+                        color scheme, simpler is better than better. It meets spec, it's easier to understand. it's
+                        easier to maintain and most likely a whole lot less buggy. </p>
+                    <p class="pAboutDesc">I'm currently working as a frontend developer in GUERILLA360.</p>
+                    <div class="skillbar-title"><span>Web Design</span></div>
+                    <div class="skillbar clearfix " data-percent="80%">
+
+                        <div class="skillbar-bar" style="background: #454343;"></div>
+                        <div class="skill-bar-percent Count">80</div>
+                    </div> <!-- End Skill Bar -->
+                    <div class="skillbar-title"><span>Web Developement</span></div>
+                    <div class="skillbar clearfix " data-percent="90%">
+
+                        <div class="skillbar-bar" style="background: #454343;"></div>
+                        <div class="skill-bar-percent Count">90</div>
+                    </div> <!-- End Skill Bar -->
+                    <img src="Image/signature.png" class="img-fluid imgSig" style="width: 150px">
+                    <div class="button-container-2">
+                        <span class="mas">HIRE ME</span>
+                        <button type="button" name="Hover">HIRE ME</button>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/2.1.3/jquery.min.js'></script>
 </body>
 <script>
     var typed = new Typed('.pJobs1', {
@@ -187,6 +237,25 @@
         typeSpeed: 70,
         backSpeed: 70,
         backDelay: 700,
+    });
+
+    jQuery(document).ready(function () {
+        jQuery('.skillbar').each(function () {
+            jQuery(this).find('.skillbar-bar').animate({
+                width: jQuery(this).attr('data-percent')
+            }, 4000);
+        });
+    });
+
+    jQuery('.Count').each(function () {
+        var $this = $(this);
+        jQuery({ Counter: 0 }).animate({ Counter: $this.text() }, {
+            duration: 4000,
+            easing: 'swing',
+            step: function () {
+                $this.text(Math.ceil(this.Counter));
+            }
+        });
     });
 </script>
 
