--- a/try.html
+++ b/try.html
@@ -47,10 +47,10 @@
                     <main ontouchstart id="styles">
                         <nav class="tab-link">
                             <a>ALL</a>
-                            <a>PROJECTS</a>
-                            <a>WEB APP</a>
-                            <a>SOFTWARE APP</a>
-                            <a>WEB DESIGN</a>
+                            <a class="tabProject">PROJECTS</a>
+                            <a class="tabWebapp">WEB APP</a>
+                            <a class="tabSoftapp">SOFTWARE APP</a>
+                            <a class="tabWebdesign">WEB DESIGN</a>
                             <hr />
                         </nav>
                     </main>
@@ -59,7 +59,7 @@
             <div class="row" style="margin-top: 20px">
                 <div class="col-lg-12">
                     <div class="card-deck">
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/live.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Shurtech</h5>
@@ -75,7 +75,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Design &#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/live.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Shurhealth</h5>
@@ -89,7 +89,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Design &#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/ongoing.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Huris</h5>
@@ -103,7 +103,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Design &#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/live.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Bridescall</h5>
@@ -116,7 +116,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Design &#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/ongoing.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;GetReady</h5>
@@ -131,7 +131,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Design &#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/live.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Guerilla 360</h5>
@@ -148,7 +148,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card project">
                             <div class="card-body">
                                 <img src="Image/ongoing.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;MciElite</h5>
@@ -164,7 +164,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Anime</h5>
@@ -180,7 +180,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Datask</h5>
@@ -195,7 +195,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Dota 2</h5>
@@ -211,7 +211,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;EMP</h5>
@@ -226,7 +226,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Restaurant</h5>
@@ -240,7 +240,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webdesign">
                             <div class="card-body">
                                 <img src="Image/design.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;VelcoAsia</h5>
@@ -256,7 +256,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card webapp">
                             <div class="card-body">
                                 <img src="Image/webapp.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Chatbot</h5>
@@ -270,7 +270,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card softapp">
                             <div class="card-body">
                                 <img src="Image/windowsapp.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Calculator</h5>
@@ -286,7 +286,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card softapp">
                             <div class="card-body">
                                 <img src="Image/windowsapp.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Terminal</h5>
@@ -301,7 +301,7 @@
                                 <p class="pBottom">&#x2688;&nbsp;Frontend</p>
                             </div>
                         </div>
-                        <div class="card">
+                        <div class="card softapp">
                             <div class="card-body">
                                 <img src="Image/windowsapp.png" class="img-fluid imgBookmark">
                                 <h5 class="card-title">&#x27F6;&nbsp;Music Player</h5>
@@ -431,7 +431,30 @@
     <script src="Script/app.js"></script>
 </body>
 <script>
-
+    $(".tabWebdesign").click(function () {
+        $(".project").css("display", "none");
+        $(".webapp").css("display", "none");
+        $(".softapp").css("display", "none");
+        $(".webdesign").css("display", "block");
+    });
+    $(".tabProject").click(function () {
+        $(".webdesign").css("display", "none");
+        $(".webapp").css("display", "none");
+        $(".softapp").css("display", "none");
+        $(".project").css("display", "block");
+    });
+    $(".tabWebapp").click(function () {
+        $(".webdesign").css("display", "none");
+        $(".project").css("display", "none");
+        $(".softapp").css("display", "none");
+        $(".webapp").css("display", "block");
+    });
+    $(".tabSoftapp").click(function () {
+        $(".webdesign").css("display", "none");
+        $(".project").css("display", "none");
+        $(".webapp").css("display", "none");
+        $(".softapp").css("display", "block");
+    });
 </script>
 
 </html>
